--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,6 @@
     <!-- * data-link attribut will allowto change the view-->
     <nav class="nav">
         <a href="/" class="nav__link" data-link>About</a>
-        <a href="/projects" class="nav__link" data-link>Projects</a>
         <a href="/contact" class="nav__link" data-link>Contact</a>
     </nav>
 
