--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anne Bequet</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/about.css">
 </head>
 
 <body>
@@ -21,6 +22,7 @@
     <div id="app"></div>
 
     <script type="module" src="/static/js/index.js"></script>
+    <script type="module" src="/static/data/data-projects.js"></script>
   
     
 </body>
