--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div id="app"></div>
 
     <script type="module" src="/static/js/index.js"></script>
-    <script type="module" src="/static/data/data-projects.js"></script>
+    <script src="/static/js/utils/index.js"></script>
   
     
 </body>
