structure app + animation on pictures

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anne Bequet</title>
-    <link rel="stylesheet" href="/static/css/home.css">
-    <link rel="stylesheet" href="/static/css/about.css">
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/about.css">
 </head>
 
 <body>
 
     <!-- navigation -->
-    <!-- * data-link attribut will allowto change the view-->
+    <!-- * data-link attribut will allow to change the view-->
     <nav class="nav">
         <a href="/" class="nav__link" data-link>About</a>
         <a href="/contact" class="nav__link" data-link>Contact</a>
@@ -21,8 +21,7 @@
     <!-- container for our components -->
     <div id="app"></div>
 
-    <script type="module" src="/static/js/index.js"></script>
-    <script src="/static/js/utils/index.js"></script>
+    <script type="module" src="./app.js"></script>
   
     
 </body>
