--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anne Bequet</title>
-    <link rel="stylesheet" href="/styles/home.css">
-    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/projectImages.css">
+    <script defer type="module" src="./app.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,6 @@
     <!-- container for our components -->
     <div id="app"></div>
 
-    <script type="module" src="./app.js"></script>
   
     
 </body>
